# daily-rent-web

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
backend/: .env.example  main.py  models.py  requirements.txt
backend/data/: products.json
backend/routes/: auth.py
backend/services/: auth.py  email_service.py  object_storage.py  pdf_service.py  storage.py  telegram_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CategoryFilter.jsx  ContactForm.jsx  CookieBanner.jsx  DeliverySection.jsx  ProductCard.jsx  ProductModal.jsx  SqlTerminal.jsx
frontend/src/context/: AuthContext.jsx  CartContext.jsx  UserContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AdminPage.jsx  AuthPage.jsx  CartPage.jsx  ContactPage.jsx  DeliveryTermsPage.jsx  HomePage.jsx  ProfilePage.jsx
